# bahn_anzeige

./: Cargo.toml  default.nix  flake.nix  log.txt
.direnv/: flake-profile-1-link  flake-profile-2-link  flake-profile-3-link  flake-profile-4-link  flake-profile-5-link  flake-profile-6-link
src/: main.rs
static/: index.js  result  style1.css
templates/: index.html
